kubernetes/ocp-gpu/applications/docling-serve/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: docling-serve
  labels:
    app: docling-serve
  annotations:
    haproxy.router.openshift.io/timeout: 10m
spec:
  to:
    kind: Service
    name: docling-serve
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
